src/components/Main/Main.module.css
.mainBlock {
    /*height: 100vh;*/
    background-color: #ffd4f0;
    user-select: none;
}

.wrapper {
    height: 100vh;
    display: flex;
    align-items: center;
    justify-content: space-between;
    flex-wrap: wrap;
}

.text {
    width: 350px;
    background-color: #f7f7f7;
    padding: 15px;
    border-radius: 9px;
}

.text h1 {
    text-transform: uppercase;
    margin: 5px 0;
}

.photo {
    width: 300px;
    height: 400px;
    background-color: #f7f7f7;
    border-radius: 9px;
}

@media screen and (max-width: 768px) {
    .wrapper {
        display: flex;
        flex-direction: column;
        align-items: center;
        justify-content: space-around;
        flex-wrap: wrap;
    }
}

@media screen and (max-width: 576px) {
    .wrapper {
        display: flex;
        flex-direction: column;
        align-items: center;
        justify-content: space-around;
        flex-wrap: wrap;
    }
}

